Fixed Footer/Header Overflow Problem under 1024px width

--- a/src/containers/Launch/launch.css
+++ b/src/containers/Launch/launch.css
@@ -4,8 +4,7 @@ body {
     min-width: 320px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+
 }
 
 /* Desktop Viewport */
